--- a/jepordy/css/jeporty.css
+++ b/jepordy/css/jeporty.css
@@ -1,9 +1,40 @@
 body{
-    height: 50px;
+    height: 500px;
     width: 100%;
-    background-color: rgb(236, 236 , 236);
+    background-color: gray;
     display: grid;
     grid-template-columns: 1fr, 1fr, 1fr, 1fr, 1fr, 1fr;
     grid-column-gap:7px;
     grid-row-gap:7px;
+}
+
+#cat1{
+    background-color: blue;
+    grid-column:1/2 ;
+    grid-row:2/2;
+}
+#cat2{
+    background-color: blue;
+    grid-column:2/3 ;
+    grid-row:2/2;
+}
+#cat3{
+    background-color: blue;
+    grid-column:3/4 ;
+    grid-row:2/2;
+}
+#cat4{
+    background-color: blue;
+    grid-column:4/5 ;
+    grid-row:2/2;
+}
+#cat5{
+    background-color: blue;
+    grid-column:5/6 ;
+    grid-row:2/2;
+}
+#cat6{
+    background-color: blue;
+    grid-column:6/7 ;
+    grid-row:2/2;
 }
