--- a/jepordy/css/jeporty.css
+++ b/jepordy/css/jeporty.css
@@ -1,40 +1,309 @@
 body{
     height: 500px;
     width: 100%;
+    height: 100vh;
     background-color: gray;
     display: grid;
     grid-template-columns: 1fr, 1fr, 1fr, 1fr, 1fr, 1fr;
-    grid-column-gap:7px;
-    grid-row-gap:7px;
+    grid-auto-rows: 2fr;
+    
+}
+
+#title{
+    background-image: url(../../jeperty.jpeg);
+    background-size:contain ;
+    grid-column:1/7 ;
+    grid-row:1/5;
+    /* height: 80px; */
+}
+
+.cat{
+    /* height: 90px; */
 }
 
 #cat1{
     background-color: blue;
     grid-column:1/2 ;
-    grid-row:2/2;
+    grid-row:5/10;
+    margin-bottom: 25px;
+    border: inset black;
 }
 #cat2{
     background-color: blue;
     grid-column:2/3 ;
-    grid-row:2/2;
+    grid-row:5/10;
+    margin-bottom: 25px;
+    border: inset black;
+
 }
 #cat3{
     background-color: blue;
     grid-column:3/4 ;
-    grid-row:2/2;
+    grid-row:5/10;
+    margin-bottom: 25px;
+    border: inset black;
+
 }
 #cat4{
     background-color: blue;
     grid-column:4/5 ;
-    grid-row:2/2;
+    grid-row:5/10;
+    margin-bottom: 25px;
+    border: inset black;
+
 }
 #cat5{
     background-color: blue;
     grid-column:5/6 ;
-    grid-row:2/2;
+    grid-row:5/10;
+    margin-bottom: 25px;
+    border: inset black;
+
 }
 #cat6{
     background-color: blue;
     grid-column:6/7 ;
-    grid-row:2/2;
+    grid-row:5/10;
+    margin-bottom: 25px;
+    border: inset black;
+
+}
+.questions1-1{
+    background-color: blue;
+    border: inset black;
+    grid-column:1/2 ;
+    grid-row:10/15;
+}
+.questions1-2{
+    background-color: blue;
+    border: inset black;
+    grid-column:2/3 ;
+    grid-row:10/15;
+}
+.questions1-3{
+    background-color: blue;
+    border: inset black;
+    grid-column:3/4 ;
+    grid-row:10/15;
+}
+.questions1-4{
+    background-color: blue;
+    border: inset black;
+    grid-column:4/5 ;
+    grid-row:10/15;
+}
+.questions1-5{
+    background-color: blue;
+    border: inset black;
+    grid-column:5/6 ;
+    grid-row:10/15;
+}
+.questions1-6{
+    background-color: blue;
+    border: inset black;
+    grid-column:6/7 ;
+    grid-row:10/15;
+}
+.questions2-1{
+    background-color: blue;
+    border: inset black;
+    grid-column:1/2 ;
+    grid-row:15/20;
+}
+.questions2-2{
+    background-color: blue;
+    border: inset black;
+    grid-column:2/3 ;
+    grid-row:15/20;
+}
+.questions2-3{
+    background-color: blue;
+    border: inset black;
+    grid-column:3/4 ;
+    grid-row:15/20;
+}
+.questions2-4{
+    background-color: blue;
+    border: inset black;
+    grid-column:4/5;
+    grid-row:15/20;
+}
+.questions2-5{
+    background-color: blue;
+    border: inset black;
+    grid-column:5/6 ;
+    grid-row:15/20;
+}
+.questions2-6{
+    background-color: blue;
+    border: inset black;
+    grid-column:6/7 ;
+    grid-row:15/20;
+}
+.questions3-1{
+    background-color: blue;
+    border: inset black;
+    grid-column:1/2 ;
+    grid-row:20/25;
+}
+.questions3-2{
+    background-color: blue;
+    border: inset black;
+    grid-column:2/3 ;
+    grid-row:20/25;
+}
+.questions3-3{
+    background-color: blue;
+    border: inset black;
+    grid-column:3/4 ;
+    grid-row:20/25;
+}
+.questions3-4{
+    background-color: blue;
+    border: inset black;
+    grid-column:4/5 ;
+    grid-row:20/25;
+}
+.questions3-5{
+    background-color: blue;
+    border: inset black;
+    grid-column:5/6 ;
+    grid-row:20/25;
+}
+.questions3-6{
+    background-color: blue;
+    border: inset black;
+    grid-column:6/7 ;
+    grid-row:20/25;
+}
+.questions4-1{
+    background-color: blue;
+    border: inset black;
+    grid-column:1/2 ;
+    grid-row:25/30;
+}
+.questions4-2{
+    background-color: blue;
+    border: inset black;
+    grid-column:2/3 ;
+    grid-row:25/30;
+}
+.questions4-3{
+    background-color: blue;
+    border: inset black;
+    grid-column:3/4 ;
+    grid-row:25/30;
+}
+.questions4-4{
+    background-color: blue;
+    border: inset black;
+    grid-column:4/5 ;
+    grid-row:25/30;
+}
+.questions4-5{
+    background-color: blue;
+    border: inset black;
+    grid-column:5/6 ;
+    grid-row:25/30;
+}
+.questions4-6{
+    background-color: blue;
+    border: inset black;
+    grid-column:6/7 ;
+    grid-row:25/30;
+}
+
+.questions5-1{
+    background-color: blue;
+    border: inset black;
+    grid-column:1/2 ;
+    grid-row:30/35;
+}
+.questions5-2{
+    background-color: blue;
+    border: inset black;
+    grid-column:2/3 ;
+    grid-row:30/35;
+}
+.questions5-3{
+    background-color: blue;
+    border: inset black;
+    grid-column:3/4 ;
+    grid-row:30/35;
+}
+.questions5-4{
+    background-color: blue;
+    border: inset black;
+    grid-column:4/5 ;
+    grid-row:30/35;
+}
+.questions5-5{
+    background-color: blue;
+    border: inset black;
+    grid-column:5/6 ;
+    grid-row:30/35;
+}
+.questions5-6{
+    background-color: blue;
+    border: inset black;
+    grid-column:6/7 ;
+    grid-row:30/35;
+}
+
+.questions6-1{
+    background-color: blue;
+    border: inset black;
+    grid-column:1/2 ;
+    grid-row:35/40;
+}
+.questions6-2{
+    background-color: blue;
+    border: inset black;
+    grid-column:2/3 ;
+    grid-row:35/40;
+}
+.questions6-3{
+    background-color: blue;
+    border: inset black;
+    grid-column:3/4 ;
+    grid-row:35/40;
+}
+.questions6-4{
+    background-color: blue;
+    border: inset black;
+    grid-column:4/5 ;
+    grid-row:35/40;
+}
+.questions6-5{
+    background-color: blue;
+    border: inset black;
+    grid-column:5/6 ;
+    grid-row:35/40;
+}
+.questions6-6{
+    background-color: blue;
+    border: inset black;
+    grid-column:6/7 ;
+    grid-row:35/40;
+}
+
+#modalback {
+    display: none ;
+    position: fixed;
+    z-index: ; 
+    left: 0;
+    top: 0;
+    width: 100vw;
+    height: 100vh;
+    overflow: auto;
+    background-color: rgba(0,0,0,0.4)
+}
+
+.modal-con1-1{
+    /* display: none; */
+    background-color: #fefefe;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%; 
 }
