--- a/jepordy/css/jeporty.css
+++ b/jepordy/css/jeporty.css
@@ -68,219 +68,219 @@ body{
     border: inset black;
 
 }
-.questions1-1{
+#questions1-1{
     background-color: blue;
     border: inset black;
     grid-column:1/2 ;
     grid-row:10/15;
 }
-.questions1-2{
+#questions1-2{
     background-color: blue;
     border: inset black;
     grid-column:2/3 ;
     grid-row:10/15;
 }
-.questions1-3{
+#questions1-3{
     background-color: blue;
     border: inset black;
     grid-column:3/4 ;
     grid-row:10/15;
 }
-.questions1-4{
+#questions1-4{
     background-color: blue;
     border: inset black;
     grid-column:4/5 ;
     grid-row:10/15;
 }
-.questions1-5{
+#questions1-5{
     background-color: blue;
     border: inset black;
     grid-column:5/6 ;
     grid-row:10/15;
 }
-.questions1-6{
+#questions1-6{
     background-color: blue;
     border: inset black;
     grid-column:6/7 ;
     grid-row:10/15;
 }
-.questions2-1{
+#questions2-1{
     background-color: blue;
     border: inset black;
     grid-column:1/2 ;
     grid-row:15/20;
 }
-.questions2-2{
+#questions2-2{
     background-color: blue;
     border: inset black;
     grid-column:2/3 ;
     grid-row:15/20;
 }
-.questions2-3{
+#questions2-3{
     background-color: blue;
     border: inset black;
     grid-column:3/4 ;
     grid-row:15/20;
 }
-.questions2-4{
+#questions2-4{
     background-color: blue;
     border: inset black;
     grid-column:4/5;
     grid-row:15/20;
 }
-.questions2-5{
+#questions2-5{
     background-color: blue;
     border: inset black;
     grid-column:5/6 ;
     grid-row:15/20;
 }
-.questions2-6{
+#questions2-6{
     background-color: blue;
     border: inset black;
     grid-column:6/7 ;
     grid-row:15/20;
 }
-.questions3-1{
+#questions3-1{
     background-color: blue;
     border: inset black;
     grid-column:1/2 ;
     grid-row:20/25;
 }
-.questions3-2{
+#questions3-2{
     background-color: blue;
     border: inset black;
     grid-column:2/3 ;
     grid-row:20/25;
 }
-.questions3-3{
+#questions3-3{
     background-color: blue;
     border: inset black;
     grid-column:3/4 ;
     grid-row:20/25;
 }
-.questions3-4{
+#questions3-4{
     background-color: blue;
     border: inset black;
     grid-column:4/5 ;
     grid-row:20/25;
 }
-.questions3-5{
+#questions3-5{
     background-color: blue;
     border: inset black;
     grid-column:5/6 ;
     grid-row:20/25;
 }
-.questions3-6{
+#questions3-6{
     background-color: blue;
     border: inset black;
     grid-column:6/7 ;
     grid-row:20/25;
 }
-.questions4-1{
+#questions4-1{
     background-color: blue;
     border: inset black;
     grid-column:1/2 ;
     grid-row:25/30;
 }
-.questions4-2{
+#questions4-2{
     background-color: blue;
     border: inset black;
     grid-column:2/3 ;
     grid-row:25/30;
 }
-.questions4-3{
+#questions4-3{
     background-color: blue;
     border: inset black;
     grid-column:3/4 ;
     grid-row:25/30;
 }
-.questions4-4{
+#questions4-4{
     background-color: blue;
     border: inset black;
     grid-column:4/5 ;
     grid-row:25/30;
 }
-.questions4-5{
+#questions4-5{
     background-color: blue;
     border: inset black;
     grid-column:5/6 ;
     grid-row:25/30;
 }
-.questions4-6{
+#questions4-6{
     background-color: blue;
     border: inset black;
     grid-column:6/7 ;
     grid-row:25/30;
 }
 
-.questions5-1{
+#questions5-1{
     background-color: blue;
     border: inset black;
     grid-column:1/2 ;
     grid-row:30/35;
 }
-.questions5-2{
+#questions5-2{
     background-color: blue;
     border: inset black;
     grid-column:2/3 ;
     grid-row:30/35;
 }
-.questions5-3{
+#questions5-3{
     background-color: blue;
     border: inset black;
     grid-column:3/4 ;
     grid-row:30/35;
 }
-.questions5-4{
+#questions5-4{
     background-color: blue;
     border: inset black;
     grid-column:4/5 ;
     grid-row:30/35;
 }
-.questions5-5{
+#questions5-5{
     background-color: blue;
     border: inset black;
     grid-column:5/6 ;
     grid-row:30/35;
 }
-.questions5-6{
+#questions5-6{
     background-color: blue;
     border: inset black;
     grid-column:6/7 ;
     grid-row:30/35;
 }
 
-.questions6-1{
+#questions6-1{
     background-color: blue;
     border: inset black;
     grid-column:1/2 ;
     grid-row:35/40;
 }
-.questions6-2{
+#questions6-2{
     background-color: blue;
     border: inset black;
     grid-column:2/3 ;
     grid-row:35/40;
 }
-.questions6-3{
+#questions6-3{
     background-color: blue;
     border: inset black;
     grid-column:3/4 ;
     grid-row:35/40;
 }
-.questions6-4{
+#questions6-4{
     background-color: blue;
     border: inset black;
     grid-column:4/5 ;
     grid-row:35/40;
 }
-.questions6-5{
+#questions6-5{
     background-color: blue;
     border: inset black;
     grid-column:5/6 ;
     grid-row:35/40;
 }
-.questions6-6{
+#questions6-6{
     background-color: blue;
     border: inset black;
     grid-column:6/7 ;
@@ -299,11 +299,140 @@ body{
     background-color: rgba(0,0,0,0.4)
 }
 
-.modal-con1-1{
-    /* display: none; */
+#modal-con1-1{
+    display: none;
     background-color: #fefefe;
     margin: 15% auto;
     padding: 20px;
     border: 1px solid #888;
     width: 80%; 
 }
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+#modal-con1-2{
+    display: none;
+    background-color: #fefefe;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%; 
+}#modal-con1-3{
+    display: none;
+    background-color: #fefefe;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%; 
+}#modal-con1-4{
+    display: none;
+    background-color: #fefefe;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%; 
+}#modal-con1-5{
+    display: none;
+    background-color: #fefefe;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%; 
+}#modal-con1-6{
+    display: none;
+    background-color: #fefefe;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%; 
+}
+#modal-con2-1{
+    display: none;
+    background-color: #fefefe;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%; 
+}#modal-con2-2{
+    display: none;
+    background-color: #fefefe;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%; 
+}#modal-con2-3{
+    display: none;
+    background-color: #fefefe;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%; 
+}#modal-con2-4{
+    display: none;
+    background-color: #fefefe;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%; 
+}#modal-con2-5{
+    display: none;
+    background-color: #fefefe;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%; 
+}#modal-con2-6{
+    display: none;
+    background-color: #fefefe;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%; 
+}#modal-con3-1{
+    display: none;
+    background-color: #fefefe;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%; 
+}#modal-con3-2{
+    display: none;
+    background-color: #fefefe;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%; 
+}#modal-con3-3{
+    display: none;
+    background-color: #fefefe;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%; 
+}#modal-con3-4{
+    display: none;
+    background-color: #fefefe;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%; 
+}#modal-con3-5{
+    display: none;
+    background-color: #fefefe;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+    /* wow  */
+}#modal-con3-6{
+    display: none;
+    background-color: #fefefe;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%; 
+}
+
