im trying jamiegit add -A

--- a/jepordy/css/jeporty.css
+++ b/jepordy/css/jeporty.css
@@ -862,3 +862,11 @@ a{
     color:gold;
     font-size: 40px;
 }
+.g{
+    margin: 5px;
+    color: whitesmoke;
+}
+.g:hover{
+    color:gold;
+    font-size: 40px;
+}
