--- a/jepordy/css/jeporty.css
+++ b/jepordy/css/jeporty.css
@@ -573,10 +573,280 @@ body{
 
 }
 
+#questions1-1:hover {
+    transition: 3s;
+    border: gold;
+    font-size:150px;
+    font-weight: bold;
+
+}
+#questions1-2:hover{ 
+    transition: 3s;
+    border: gold;
+    font-size:150px;
+    font-weight: bold;
+
+}
+#questions1-3:hover{ 
+    transition: 3s;
+    border: gold;
+    font-size:150px;
+    font-weight: bold;
+
+}
+#questions1-4:hover{ 
+    transition: 3s;
+    border: gold;
+    font-size:150px;
+    font-weight: bold;
+
+}
+#questions1-5:hover{ 
+    transition: 3s;
+    border: gold;
+    font-size:150px;
+    font-weight: bold;
+
+}
+#questions1-6:hover{ 
+    transition: 3s;
+    border: gold;
+    font-size:150px;
+    font-weight: bold;
+
+}
+#questions2-1:hover{ 
+    transition: 3s;
+    border: gold;
+    font-size:150px;
+    font-weight: bold;
+
+}
+#questions2-2:hover{ 
+    transition: 3s;
+    border: gold;
+    font-size:150px;
+    font-weight: bold;
+
+}
+#questions2-3:hover{ 
+    transition: 3s;
+    border: gold;
+    font-size:150px;
+    font-weight: bold;
+
+}
+#questions2-4:hover{ 
+    transition: 3s;
+    border: gold;
+    font-size:150px;
+    font-weight: bold;
+
+}
+#questions2-5:hover{ 
+    transition: 3s;
+    border: gold;
+    font-size:150px;
+    font-weight: bold;
+
+}
+#questions2-6:hover{ 
+    transition: 3s;
+    border: gold;
+    font-size:150px;
+    font-weight: bold;
+
+}
+#questions3-1:hover{ 
+    transition: 3s;
+    border: gold;
+    font-size:150px;
+    font-weight: bold;
+
+}
+#questions3-1:hover{ 
+    transition: 3s;
+    border: gold;
+    font-size:150px;
+    font-weight: bold;
+
+}
+#questions3-2:hover{ 
+    transition: 3s;
+    border: gold;
+    font-size:150px;
+    font-weight: bold;
+
+}
+#questions3-3:hover{ 
+    transition: 3s;
+    border: gold;
+    font-size:150px;
+    font-weight: bold;
+
+}
+#questions3-4:hover{ 
+    transition: 3s;
+    border: gold;
+    font-size:150px;
+    font-weight: bold;
+
+}
+#questions3-5:hover{ 
+    transition: 3s;
+    border: gold;
+    font-size:150px;
+    font-weight: bold;
+
+}
+#questions3-6:hover{ 
+    transition: 3s;
+    border: gold;
+    font-size:150px;
+    font-weight: bold;
+    font-weight: bold;
+
+}
+#questions4-1:hover{ 
+    transition: 3s;
+    border: gold;
+    font-size:150px;
+    font-weight: bold;
+
+}
+#questions4-2:hover{ 
+    transition: 3s;
+    border: gold;
+    font-size:150px;
+    font-weight: bold;
+
+}
+#questions4-3:hover{ 
+    transition: 3s;
+    border: gold;
+    font-size:150px;
+    font-weight: bold;
+
+}
+#questions4-4:hover{ 
+    transition: 3s;
+    border: gold;
+    font-size:150px;
+    font-weight: bold;
+
+}
+#questions4-5:hover{ 
+    transition: 3s;
+    border: gold;
+    font-size:150px;
+    font-weight: bold;
+
+}
+#questions4-6:hover{ 
+    transition: 3s;
+    border: gold;
+    font-size:150px;
+    font-weight: bold;
+
+}
+#questions5-1:hover{ 
+    transition: 3s;
+    border: gold;
+    font-size:150px;
+    font-weight: bold;
+
+}
+#questions5-2:hover{ 
+    transition: 3s;
+    border: gold;
+    font-size:150px;
+    font-weight: bold;
+
+}
+#questions5-3:hover{ 
+    transition: 3s;
+    border: gold;
+    font-size:150px;
+    font-weight: bold;
+
+}
+#questions5-4:hover{ 
+    transition: 3s;
+    border: gold;
+    font-size:150px;
+    font-weight: bold;
+
+
+}
+#questions5-5:hover{ 
+    transition: 3s;
+    border: gold;
+    font-size:150px;
+    font-weight: bold;
+
+
+}
+#questions5-6:hover{ 
+    transition: 3s;
+    border: gold;
+    font-size:150px;
+    font-weight: bold;
+
+
+}
+#questions6-1:hover{ 
+    transition: 3s;
+    border: gold;
+    font-size:150px;
+    font-weight: bold;
+
+
+}
+#questions6-2:hover{ 
+    transition: 3s;
+    border: gold;
+    font-size:150px;
+    font-weight: bold;
+
+
+}
+#questions6-3:hover{ 
+    transition: 3s;
+    border: gold;
+    font-size:150px;
+    font-weight: bold;
+
+
+}
+#questions6-4:hover{ 
+    transition: 3s;
+    border: gold;
+    font-size:150px;
+    font-weight: bold;
+
+
+}
+#questions6-5:hover{ 
+    transition: 3s;
+    border: gold;
+    font-size:150px;
+    font-weight: bold;
+
+
+}
+#questions6-6:hover{ 
+    transition: 3s;
+    border: gold;
+    font-size:150px;
+    font-weight: bold;
+
+}
+
+
 #modalback {
     display: none ;
     position: fixed;
-    z-index: ; 
+    z-index: 3; 
     left: 0;
     top: 0;
     width: 100vw;
@@ -598,8 +868,43 @@ body{
 .close {
     color: #aaa;
     float: right;
-    font-size: 28px;
+    font-size: 18px;
     font-weight: bold;
+    margin-left:1000px ;
+    height: 21px;
+}
+ .dubbleJeopardy{
+    color:maroon;
+}
+span{
+    color:whitesmoke;
+    font-weight: bold;
+    font-size: 20pt;
+}
+
+p{
+    margin-left: 400px;
+}
+a{
+    text-decoration: none;
+    color:gold;
+}
+
+.d{
+    margin: 5px;
+    color: whitesmoke;
+}
+.d:hover{
+    color:gold;
+    font-size: 40px;
+}
+.g{
+    margin: 5px;
+    color: whitesmoke;
+}
+.g:hover{
+    color:gold;
+    font-size: 40px;
 }
 #modal-con1-2{
     display: none;
@@ -848,25 +1153,4 @@ body{
     padding: 20px;
     border: 1px solid #888;
     width: 80%; 
-}
-a{
-    text-decoration: none;
-    color:gold;
-}
-
-.d{
-    margin: 5px;
-    color: whitesmoke;
-}
-.d:hover{
-    color:gold;
-    font-size: 40px;
-}
-.g{
-    margin: 5px;
-    color: whitesmoke;
-}
-.g:hover{
-    color:gold;
-    font-size: 40px;
 }
