--- a/jepordy/css/jeporty.css
+++ b/jepordy/css/jeporty.css
@@ -1,6 +1,6 @@
 body{
     height: 500px;
-    width: 100%;
+    width: 100vw;
     height: 100vh;
     background-color: gray;
     display: grid;
@@ -572,272 +572,284 @@ body{
 
 
 }
+.wraper{
+    background-image: url(standard.png);
+    display: inline-flex;
+    grid-column:1/7 ;
+    grid-row:40/41;
+}
+.Contestents{
+    background-color: rgba(192,192,192,0.3);
+    margin-left: 40px;
+    width: 330px;
+    height: 80px;
+}
 
 #questions1-1:hover {
-    transition: 3s;
+    transition: 2s;
     border: gold;
-    font-size:150px;
+    font-size:110px;
     font-weight: bold;
 
 }
 #questions1-2:hover{ 
-    transition: 3s;
+    transition: 2s;
     border: gold;
-    font-size:150px;
+    font-size:110px;
     font-weight: bold;
 
 }
 #questions1-3:hover{ 
-    transition: 3s;
+    transition: 2s;
     border: gold;
-    font-size:150px;
+    font-size:110px;
     font-weight: bold;
 
 }
 #questions1-4:hover{ 
-    transition: 3s;
+    transition: 2s;
     border: gold;
-    font-size:150px;
+    font-size:110px;
     font-weight: bold;
 
 }
 #questions1-5:hover{ 
-    transition: 3s;
+    transition: 2s;
     border: gold;
-    font-size:150px;
+    font-size:110px;
     font-weight: bold;
 
 }
 #questions1-6:hover{ 
-    transition: 3s;
+    transition: 2s;
     border: gold;
-    font-size:150px;
+    font-size:110px;
     font-weight: bold;
 
 }
 #questions2-1:hover{ 
-    transition: 3s;
+    transition: 2s;
     border: gold;
-    font-size:150px;
+    font-size:110px;
     font-weight: bold;
 
 }
 #questions2-2:hover{ 
-    transition: 3s;
+    transition: 2s;
     border: gold;
-    font-size:150px;
+    font-size:110px;
     font-weight: bold;
 
 }
 #questions2-3:hover{ 
-    transition: 3s;
+    transition: 2s;
     border: gold;
-    font-size:150px;
+    font-size:110px;
     font-weight: bold;
 
 }
 #questions2-4:hover{ 
-    transition: 3s;
+    transition: 2s;
     border: gold;
-    font-size:150px;
+    font-size:110px;
     font-weight: bold;
 
 }
 #questions2-5:hover{ 
-    transition: 3s;
+    transition: 2s;
     border: gold;
-    font-size:150px;
+    font-size:110px;
     font-weight: bold;
 
 }
 #questions2-6:hover{ 
-    transition: 3s;
+    transition: 2s;
     border: gold;
-    font-size:150px;
+    font-size:110px;
     font-weight: bold;
 
 }
 #questions3-1:hover{ 
-    transition: 3s;
+    transition: 2s;
     border: gold;
-    font-size:150px;
+    font-size:110px;
     font-weight: bold;
 
 }
 #questions3-1:hover{ 
-    transition: 3s;
+    transition: 2s;
     border: gold;
-    font-size:150px;
+    font-size:110px;
     font-weight: bold;
 
 }
 #questions3-2:hover{ 
-    transition: 3s;
+    transition: 2s;
     border: gold;
-    font-size:150px;
+    font-size:110px;
     font-weight: bold;
 
 }
 #questions3-3:hover{ 
-    transition: 3s;
+    transition: 2s;
     border: gold;
-    font-size:150px;
+    font-size:110px;
     font-weight: bold;
 
 }
 #questions3-4:hover{ 
-    transition: 3s;
+    transition: 2s;
     border: gold;
-    font-size:150px;
+    font-size:110px;
     font-weight: bold;
 
 }
 #questions3-5:hover{ 
-    transition: 3s;
+    transition: 2s;
     border: gold;
-    font-size:150px;
+    font-size:110px;
     font-weight: bold;
 
 }
 #questions3-6:hover{ 
-    transition: 3s;
+    transition: 2s;
     border: gold;
-    font-size:150px;
+    font-size:110px;
     font-weight: bold;
     font-weight: bold;
 
 }
 #questions4-1:hover{ 
-    transition: 3s;
+    transition: 2s;
     border: gold;
-    font-size:150px;
+    font-size:110px;
     font-weight: bold;
 
 }
 #questions4-2:hover{ 
-    transition: 3s;
+    transition: 2s;
     border: gold;
-    font-size:150px;
+    font-size:110px;
     font-weight: bold;
 
 }
 #questions4-3:hover{ 
-    transition: 3s;
+    transition: 2s;
     border: gold;
-    font-size:150px;
+    font-size:110px;
     font-weight: bold;
 
 }
 #questions4-4:hover{ 
-    transition: 3s;
+    transition: 2s;
     border: gold;
-    font-size:150px;
+    font-size:110px;
     font-weight: bold;
 
 }
 #questions4-5:hover{ 
-    transition: 3s;
+    transition: 2s;
     border: gold;
-    font-size:150px;
+    font-size:110px;
     font-weight: bold;
 
 }
 #questions4-6:hover{ 
-    transition: 3s;
+    transition: 2s;
     border: gold;
-    font-size:150px;
+    font-size:110px;
     font-weight: bold;
 
 }
 #questions5-1:hover{ 
-    transition: 3s;
+    transition: 2s;
     border: gold;
-    font-size:150px;
+    font-size:110px;
     font-weight: bold;
 
 }
 #questions5-2:hover{ 
-    transition: 3s;
+    transition: 2s;
     border: gold;
-    font-size:150px;
+    font-size:110px;
     font-weight: bold;
 
 }
 #questions5-3:hover{ 
-    transition: 3s;
+    transition: 2s;
     border: gold;
-    font-size:150px;
+    font-size:110px;
     font-weight: bold;
 
 }
 #questions5-4:hover{ 
-    transition: 3s;
+    transition: 2s;
     border: gold;
-    font-size:150px;
+    font-size:110px;
     font-weight: bold;
 
 
 }
 #questions5-5:hover{ 
-    transition: 3s;
+    transition: 2s;
     border: gold;
-    font-size:150px;
+    font-size:110px;
     font-weight: bold;
 
 
 }
 #questions5-6:hover{ 
-    transition: 3s;
+    transition: 2s;
     border: gold;
-    font-size:150px;
+    font-size:110px;
     font-weight: bold;
 
 
 }
 #questions6-1:hover{ 
-    transition: 3s;
+    transition: 2s;
     border: gold;
-    font-size:150px;
+    font-size:110px;
     font-weight: bold;
 
 
 }
 #questions6-2:hover{ 
-    transition: 3s;
+    transition: 2s;
     border: gold;
-    font-size:150px;
+    font-size:110px;
     font-weight: bold;
 
 
 }
 #questions6-3:hover{ 
-    transition: 3s;
+    transition: 2s;
     border: gold;
-    font-size:150px;
+    font-size:110px;
     font-weight: bold;
 
 
 }
 #questions6-4:hover{ 
-    transition: 3s;
+    transition: 2s;
     border: gold;
-    font-size:150px;
+    font-size:110px;
     font-weight: bold;
 
 
 }
 #questions6-5:hover{ 
-    transition: 3s;
+    transition: 2s;
     border: gold;
-    font-size:150px;
+    font-size:110px;
     font-weight: bold;
 
 
 }
 #questions6-6:hover{ 
-    transition: 3s;
+    transition: 2s;
     border: gold;
-    font-size:150px;
+    font-size:110px;
     font-weight: bold;
 
 }
