--- a/jepordy/css/jeporty.css
+++ b/jepordy/css/jeporty.css
@@ -925,15 +925,18 @@ border: gold;
     background-color: rgba(0,0,0,0.4)
 }
 #erric{
+    grid-column: 1/7;
+    position: absolute;
+    /* grid-row: ; */
     display: none;
     background-color: blue;
     margin: 15% auto;
-    padding: 20px;
-         
+    padding: 20px;   
     background: linear-gradient(to right, #a4bafa, #2948ff); 
 border: 1px solid #888;
     width: 80%; 
-    justify-content:space-around ;
+    justify-content:center ;
+    
     
 }
 #modal-con1-1{
@@ -945,7 +948,7 @@ border: 1px solid #888;
     background: linear-gradient(to right, #a4bafa, #2948ff); 
 border: 1px solid #888;
     width: 80%; 
-    justify-content:space-around ;
+    justify-content:center ;
     
 }
 .close {
