--- a/jepordy/css/jeporty.css
+++ b/jepordy/css/jeporty.css
@@ -27,6 +27,12 @@ body{
     grid-row:5/10;
     margin-bottom: 25px;
     border: inset black;
+    font-size: 40px;
+    font-family: 'Oswald', sans-serif;
+    color:gold;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 #cat2{
     background-color: blue;
@@ -34,6 +40,12 @@ body{
     grid-row:5/10;
     margin-bottom: 25px;
     border: inset black;
+    font-size: 40px;
+    font-family: 'Oswald', sans-serif;
+    color:gold;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
 }
 #cat3{
@@ -42,6 +54,12 @@ body{
     grid-row:5/10;
     margin-bottom: 25px;
     border: inset black;
+    font-size: 40px;
+    font-family: 'Oswald', sans-serif;
+    color:gold;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
 }
 #cat4{
@@ -50,6 +68,12 @@ body{
     grid-row:5/10;
     margin-bottom: 25px;
     border: inset black;
+    font-size: 40px;
+    font-family: 'Oswald', sans-serif;
+    color:gold;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
 }
 #cat5{
@@ -58,6 +82,12 @@ body{
     grid-row:5/10;
     margin-bottom: 25px;
     border: inset black;
+    font-size: 40px;
+    font-family: 'Oswald', sans-serif;
+    color:gold;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
 }
 #cat6{
@@ -66,6 +96,12 @@ body{
     grid-row:5/10;
     margin-bottom: 25px;
     border: inset black;
+    font-size: 40px;
+    font-family: 'Oswald', sans-serif;
+    color:gold;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
 }
 #questions1-1{
